# itermore

./: Cargo.toml  README.md
.github/workflows/: build.yaml
crates/arrays/: Cargo.toml  README.md
crates/arrays/src/: into_iter.rs  lib.rs  transmute.rs
crates/arrays/tests/: into_iter.rs  lib.rs
crates/chunks/: Cargo.toml  README.md
crates/chunks/src/: lib.rs
crates/chunks/tests/: smoke.rs
crates/windows/: Cargo.toml  README.md
crates/windows/src/: lib.rs
crates/windows/tests/: random.rs  smoke.rs
src/: array.rs  chunks.rs  flatten_tuple.rs  lib.rs  sorted.rs  windows.rs
src/adaptors/: array_chunks.rs  array_combinations.rs  array_combinations_with_reps.rs  array_windows.rs  cartesian_product.rs  circular_array_windows.rs  combinations.rs  combinations_with_reps.rs  generic_combinations.rs  mod.rs  power_set.rs
src/xtraits/: collect_array.rs  min_max.rs  mod.rs  next_chunk.rs  sorted.rs
tests/: array_chunks.rs  array_combinations.rs  array_combinations_with_reps.rs  array_windows.rs  cartesian_product.rs  chunks.rs  circular_array_windows.rs  collect_array.rs  combinations.rs  combinations_with_reps.rs  min_max.rs  sorted.rs  windows.rs
