[workspace]
members = ["crates/*"]

[package]
name = "itermore"
version = "0.5.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
rust-version = "1.56"
description = "🤸‍♀️ More iterator adaptors"
repository = "https://github.com/rossmacarthur/itermore"
license = "MIT OR Apache-2.0"
keywords = ["iterator", "chunks", "windows"]
categories = ["algorithms", "rust-patterns"]

[dependencies]
arrays = { version = "0.1.1", path = "crates/arrays", optional = true }
iterchunks = { version = "0.3.0", path = "crates/chunks", optional = true }
iterwindows = { version = "0.3.0", path = "crates/windows", optional = true }

[features]
default = [
    "std",
    "array_chunks",
    "array_combinations",
    "array_windows",
    "cartesian_product",
    "combinations",
    "min_max",
    "sorted",
]

std = ["alloc"]
alloc = []

array_chunks = ["dep:iterchunks"]
array_combinations = ["alloc", "dep:arrays"]
array_windows = ["dep:iterwindows"]
cartesian_product = []
combinations = ["alloc"]
min_max = []
sorted = ["alloc"]
