[workspace]
members = ["crates/*"]

[package]
name = "itermore"
version = "0.6.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
rust-version = "1.56"
description = "🤸‍♀️ More iterator adaptors"
repository = "https://github.com/rossmacarthur/itermore"
license = "MIT OR Apache-2.0"
keywords = ["iterator", "chunks", "windows"]
categories = ["algorithms", "rust-patterns"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
arrays = { version = "0.1.1", path = "crates/arrays", optional = true }

[features]
default = [
    "std",

    "array_chunks",
    "array_combinations",
    "array_windows",
    "cartesian_product",
    "circular_array_windows",
    "combinations",
    "min_max",
    "sorted",
]

std = ["alloc"]
alloc = []

array_chunks = ["dep:arrays"]
array_combinations = ["alloc", "dep:arrays"]
array_windows = ["dep:arrays"]
cartesian_product = []
circular_array_windows = ["array_windows"]
combinations = ["alloc"]
min_max = []
sorted = ["alloc"]
