[package]
name = "arrays"
version = "0.1.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
rust-version = "1.56"
description = "Collect an iterator into an array"
readme = "README.md"
repository = "https://github.com/rossmacarthur/itermore"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "array"]
categories = ["rust-patterns"]
