[package]
name = "arrays"
version = "0.1.1"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
rust-version = "1.56"
description = "Get the next N items of an iterator as an array"
readme = "README.md"
repository = "https://github.com/rossmacarthur/itermore"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "array", "next_chunk"]
categories = ["rust-patterns"]
