[package]
name = "arrays"
version = "0.1.1"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
rust-version = "1.56"
description = "Construct an array from an iterator"
readme = "README.md"
repository = "https://github.com/rossmacarthur/itermore"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "array", "from_iter"]
categories = ["rust-patterns"]
