[package]
name = "iterchunks"
version = "0.1.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
description = "An iterator adapter to adapter that yields N elements of the iterator at a time"
readme = "README.md"
repository = "https://github.com/rossmacarthur/itermore"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "iterator", "chunks"]
categories = ["algorithms", "rust-patterns"]
