[package]
name = "iterchunks"
version = "0.5.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
rust-version = "1.56"
description = "An iterator adaptor to adaptor that yields N elements of the iterator at a time"
readme = "README.md"
repository = "https://github.com/rossmacarthur/itermore"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "iterator", "chunks"]
categories = ["algorithms", "rust-patterns"]
include = ["src/lib.rs", "LICENSE-*", "README.md"]

[dependencies.itermore]
version = "0.7.1"
path = "../.."
features = ["array_chunks"]
