[package]
name = "iterwindows"
version = "0.4.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
rust-version = "1.56"
description = "An iterator adapter to iterate over all contiguous windows of length N"
readme = "README.md"
repository = "https://github.com/rossmacarthur/itermore"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "iterator", "windows"]
categories = ["algorithms", "rust-patterns"]

[dependencies.itermore]
version = "0.6.0"
path = "../.."
default-features = false
features = ["array_windows"]
